[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylasdev"
version = "1.0.0"
description = "Python library for reading and writing LAS (Log ASCII Standard) and DEV (deviation) well log files"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.12"
authors = [
    {name = "Artur Muharlyamov", email = "muharlyamovar@ufanipi.ru"},
]
keywords = ["las", "well-log", "dev", "geoscience", "petrophysics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5.0",
    "chardet>=5.0",
]
pandas = ["pandas>=2.0"]
all = ["pylasdev[dev,pandas]"]

[project.urls]
Homepage = "https://github.com/user/pylasdev"

# UV configuration
[tool.uv]
package = true

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF022", # __all__ not sorted (organized by category instead)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports (re-exports)
"mnem_base.py" = ["RUF001"]  # intentional Cyrillic chars in mnemonic mappings

[tool.ruff.lint.isort]
known-first-party = ["pylasdev"]

# MyPy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["numpy.*", "chardet.*"]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/pylasdev"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
